--- a/index.html
+++ b/index.html
@@ -1,21 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <title>Portofolio Ana</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>Web Portifolio</title>
 </head>
-<body>
-    <div class="background-image">
-        <div class="main-text">
-            <h1>Farel Baihaqi Al-Aftah</h1>
-            <h3>i'm a sniper that work for an assasins that lived near the Mountain</h3>
-            <button>FEED ME!!</button>
-        </div>
 
-    </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, reiciendis.</p>
+<body>
+    <!-- Header -->
+    <header class="header-1">
+        <nav class="nav bd-grid">
+            <div>
+                <a href="#" class="nav__logo">PORTOFOLIO</a>
+            </div>
+
+            <div class="nav-menu" id="nav-menu">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
+                    <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#portofolio" class="nav-link">Portofolio</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-toggle" id="nav-toggle"><i class="fa-solid fa-bars"></i></i>
+            </div>
+        </nav>
+    </header>
+    <!-- End Header -->
+
+    <!-- Main -->
+
+    <main class="main">
+        <!-- Home -->
+        <section class="home" id="home">
+            <div class="home-container bd-grid">
+                <h1 class="home-title"><span class="first">hello</span><br><span class="second">guys.</span> </h1>
+            </div>
+
+            <div class="home-scroll">
+                <a href="#about" class="home-scroll-link"><i class="fa-solid fa-arrow-down"></i> Take a Look</a>
+            </div>
+
+            <img src="/Assets/images/Photo_latar_merah-removebg-preview.png" class="home-image" alt="me">
+        </section>
+
+        <!-- About -->
+        <section class="about-section" id="about">
+            <h2 class="section-title">About</h2>
+            <div class="about-container bd-grid">
+                <div class="about-image">
+                    <img src="/Assets/images/Photo_latar_merah-removebg-preview.png" alt="koplak">
+                </div>
+                <div>
+                    <h2 class="about-subtitle">I'm Farrel Baihaqi Al Aftah</h2>
+                    <div class="about-profession">a Website Developer</div>
+                    <div class="about-text">I can make a simple website design <br>with my current skills</div>
+
+                    <div class="about-social">
+                        <a href="https://github.com/FarrelBHQ" class="about-social-icon"><i
+                                class="fa-brands fa-github"></i></a>
+                        <a href="https://www.instagram.com/farrellikecodes/" class="about-social-icon"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="about-social-icon"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End About -->
+
+        <!-- Skills -->
+        <section class="skills section" id="skills">
+            <h2 class="section-title">Skills</h2>
+
+            <div class="skills-container bd-grid">
+                <div class="skills-box">
+                    <h3 class="skills-subtitle">Development</h3>
+                    <div class="skills-name">html</div>
+                    <div class="skills-name">css</div>
+                    <div class="skills-name">javascript</div>
+                    <div class="skills-name">bootstrap</div>
+
+                    <h3 class="skills-subtitle">Design</h3>
+                    <div class="skills-name">Figma</div>
+                    <div class="skills-name">Canva</div>
+
+                </div>
+
+                <div class="skills-image">
+                    <img src="/Assets/images/Coding _Two Color.svg" alt="Skills">
+                </div>
+            </div>
+        </section>
+
+        <!-- End Skills -->
+
+        <!-- Portofolia -->
+        <section class="portofolio section" id="portofolio">
+            <h2 class="section-title">Certificates & Creations</h2>
+
+            <div class="portofolio-container bd-grid">
+
+                <div class="portofolio-image">
+                    <img src="/Assets/images/sertifikat_course_123_2408030_171022191825_page-0001.jpg"
+                        alt="Certificate">
+
+                    <div class="portofolio-link">
+                        <a href="#" class="portofolio-link-name">view Details</a>
+                    </div>
+                </div>
+
+                <div class="portofolio-image">
+                    <img src="/Assets/images/sertifikat_course_256_2408030_131022101035_page-0001.jpg"
+                        alt="Certificate">
+
+                    <div class="portofolio-link">
+                        <a href="#" class="portofolio-link-name">view Details</a>
+                    </div>
+                </div>
+
+                <div class="portofolio-image">
+                    <img src="/Assets/images/sertifikat_course_302_2408030_131022101214_page-0001.jpg"
+                        alt="Certificate">
+
+                    <div class="portofolio-link">
+                        <a href="#" class="portofolio-link-name">view Details</a>
+                    </div>
+                </div>
+
+                <div class="portofolio-image">
+                    <img src="/Assets/images/sertifikat_course_315_2408030_241022191823_page-0001.jpg"
+                        alt="Certificate">
+
+                    <div class="portofolio-link">
+                        <a href="#" class="portofolio-link-name">view Details</a>
+                    </div>
+                </div>
+
+                <div class="portofolio-image">
+                    <img src="https://www.dicoding.com/certificates/MRZM4KR8LXYQ" alt="Certificate">
+
+                    <div class="portofolio-link">
+                        <a href="#" class="portofolio-link-name">view Details</a>
+                    </div>
+                </div>
+
+                <div class="portofolio-image">
+                    <img src="https://www.dicoding.com/certificates/MRZM4KR8LXYQ" alt="Certificate">
+
+                    <div class="portofolio-link">
+                        <a href="#" class="portofolio-link-name">view Details</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Portofolio -->
+
+        <!-- Contact -->
+        <section class="contact section" id="contact">
+            <h2 class="section-title">Contact</h2>
+
+            <div class="contact-container bd-grid">
+                <div class="contact-info">
+                    <h3 class="contact-subtitle">Email</h3>
+                    <div class="contact-text">farrelbaihaqi1212@gmail.com</div>
+
+                    <h3 class="contact-subtitle">Phone</h3>
+                    <div class="contact-text">+62 813 5406 4206</div>
+
+                    <h3 class="contact-subtitle">Address</h3>
+                    <div class="contact-text">Jl. Wonorejo 4 rt 35 no. 110 <br> Kel. Gn. Samarinda <br> Kec. Balikpapan
+                        Utara <br> 76125</div>
+                </div>
+
+                <form action="" class="contact-form">
+                    <div class="contact-inputs">
+                        <input type="text" placeholder="Name" class="contact-input">
+                        <input type="mail" placeholder="Email" class="contact-input">
+                    </div>
+
+                    <textarea name="" id="" cols="0" rows="10" class="contact-input"></textarea>
+
+                    <button type="submit" value="submit" class="contact-button">Send</button>
+                </form>
+            </div>
+        </section>
+        <!-- End Contanct -->
+
+        <!-- Footer -->
+        <footer class="footer section">
+            <div class="footer-container bd-grid">
+                <div class="footer-data">
+                    <h2 class="footer-title">Farrel BAihaqi Al Aftah</h2>
+                    <p class="footer-text">This is My Portofolio Website</p>
+                </div>
+                <div class="footer-data">
+                    <h2 class="footer-title">EXPLORE</h2>
+                    <ul>
+                        <li><a href="#home" class="footer-link">Home</a></li>
+                        <li><a href="#about" class="footer-link">About</a></li>
+                        <li><a href="#skills" class="footer-link">Skills</a></li>
+                        <li><a href="#portofolio" class="footer-link">Portofolio</a></li>
+                        <li><a href="#contact" class="footer-link">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-data">
+                    <h2 class="footer-title">FOLLOW</h2>
+
+                    <a href="https://github.com/FarrelBHQ" class="footer-social"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="footer-social"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" class="footer-social"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/farrellikecodes/" class="footer-social"><i
+                            class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+        </footer>
+        <!-- End Footer -->
+    </main>
+
+
+
+
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://kit.fontawesome.com/e81773e2de.js" crossorigin="anonymous"></script>
+    <script src="/main.js"></script>
+
 </body>
+
 </html>
