--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="portofolio-image">
-                    <img src="https://www.dicoding.com/certificates/MRZM4KR8LXYQ" alt="Certificate">
+                    <img src="/Assets/images/web-crop.png" alt="Web Design">
 
                     <div class="portofolio-link">
                         <a href="#" class="portofolio-link-name">view Details</a>
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="portofolio-image">
-                    <img src="https://www.dicoding.com/certificates/MRZM4KR8LXYQ" alt="Certificate">
+                    <img src="/Assets/images/screencapture-127-0-0-1-5502-2022-11-25-14_00_31.png" alt="Web Design">
 
                     <div class="portofolio-link">
                         <a href="#" class="portofolio-link-name">view Details</a>
