--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         alt="Certificate">
 
                     <div class="portofolio-link">
-                        <a href="#" class="portofolio-link-name">view Details</a>
+                        <a href="https://www.dicoding.com/certificates/MEPJK5VQ4X3V" class="portofolio-link-name">view Details</a>
                     </div>
                 </div>
 
@@ -119,7 +119,7 @@
                         alt="Certificate">
 
                     <div class="portofolio-link">
-                        <a href="#" class="portofolio-link-name">view Details</a>
+                        <a href="https://www.dicoding.com/certificates/1OP85Y498PQK" class="portofolio-link-name">view Details</a>
                     </div>
                 </div>
 
@@ -128,7 +128,7 @@
                         alt="Certificate">
 
                     <div class="portofolio-link">
-                        <a href="#" class="portofolio-link-name">view Details</a>
+                        <a href="https://www.dicoding.com/certificates/JLX1L04ONX72" class="portofolio-link-name">view Details</a>
                     </div>
                 </div>
 
@@ -137,7 +137,7 @@
                         alt="Certificate">
 
                     <div class="portofolio-link">
-                        <a href="#" class="portofolio-link-name">view Details</a>
+                        <a href="https://www.dicoding.com/certificates/MRZM4KR8LXYQ" class="portofolio-link-name">view Details</a>
                     </div>
                 </div>
 
@@ -145,7 +145,7 @@
                     <img src="/Assets/images/web-crop.png" alt="Web Design">
 
                     <div class="portofolio-link">
-                        <a href="#" class="portofolio-link-name">view Details</a>
+                        <a href="https://gumballs-family-friends.netlify.app/" class="portofolio-link-name">view Details</a>
                     </div>
                 </div>
 
