--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
                         <a href="#" class="portofolio-link-name">view Details</a>
                     </div>
                 </div>
+
+                <div class="portofolio-image">
+                    <img src="/Assets/images/Sertifikat_hafalan.png" alt="Certicate">
+
+                    <div class="portofolio-link">
+                        <a href="#" class="portofolio-link-name">view Details</a>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- End Portofolio -->
