--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
 
                 <div class="portofolio-image">
-                    <img src="/Assets/images/Sertifikat_hafalan.png" alt="Certicate">
+                    <img src="/Assets/images/sertifikat_hafalan.jpg" alt="Certificate">
 
                     <div class="portofolio-link">
                         <a href="#" class="portofolio-link-name">view Details</a>
